listo para produccion

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+
+    <!-- <img src="http://localhost:3000/imagenes/usuarios/5f87128a4b001f0b701a7dfe-257.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjpmYWxzZSwiZ29vZ2xlIjpmYWxzZSwiX2lkIjoiNWY4NzEyOGE0YjAwMWYwYjcwMWE3ZGZlIiwibm9tYnJlIjoidGVzdDIyIiwiZW1haWwiOiJ0ZXN0MkBnbWFpbC5jb20iLCJfX3YiOjB9LCJpYXQiOjE2MDM4OTQ5MzgsImV4cCI6MTYwNjQ4NjkzOH0.xZ_bEEhd8aWPav-5-Gscws6SH4-B2gi8RZKQnS78DBU" alt=""> -->
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <script>
